apps/car-rental/base/networkpolicy/allow-from-openshift-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: ["api-gateway", "web-ui"]
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              policy-group.network.openshift.io/ingress: ""
